--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="contain">
             <div class="img-contain">
                 <div class="imgs">
-                    <img src="images/port.jpg" alt="">
+                    <img src="image1/port.jpg" alt="">
                 </div>
             </div>
             <div class="details">
